basic enchant command, without level restriction

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,3 +28,6 @@ permissions:
   nu.reload:
     description: Reload permission
     default: op
+  nu.addenchsrc:
+    description: Add item as enchantment source
+    default: op
