--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -31,3 +31,6 @@ permissions:
   nu.addenchsrc:
     description: Add item as enchantment source
     default: op
+  nu.launch:
+    description: Launch player into sky
+    default: op
