added /nu project, close #6

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -55,3 +55,6 @@ permissions:
     default: true
   nu.format:
     default: true
+  nu.project:
+    description: Set player velocity
+    default: op
