basic mailbox create/remove/send

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -58,3 +58,9 @@ permissions:
   nu.project:
     description: Set player velocity
     default: op
+  nu.mailbox:
+    description: Basic permission requied for mailbox
+    default: true
+  nu.mailadmin:
+    description: Administrative commands for mailbox
+    default: op
