sendchest & LockettePro integration

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    flatDir {
+        dirs 'lib'
+    }
+   
     jcenter()
 
     maven {
@@ -29,6 +33,7 @@ repositories {
 dependencies {
     compile 'org.spigotmc:spigot-api:1.10.2-R0.1-SNAPSHOT'
     compile 'net.milkbowl.vault:VaultAPI:1.6'
+    compile name: 'LocketteProAPI'
 }
 
 
