--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: NyaaUtils
 main: cat.nyaa.nyaautils.NyaaUtils
-description: "Plugin for Nyaacat Minecraft Server"
-version: 1.0
+description: "Helper/utilities plugin for Nyaacat Minecraft Server"
+version: 2.0
 depend: [Vault]
 softdepend: [LockettePro]
 authors: [RecursiveG]
