--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: java
 jdk: oraclejdk8
 before_install:
-- rvm install 2.3.1
-- rvm use 2.3.1
-- ruby -v
-- 'sed "s/^\(version: \).*$/\1$main_version.$TRAVIS_BUILD_NUMBER/g" src/main/resources/plugin.yml'
+- 'sed -i "s/^\(version: \).*$/\1$main_version.$TRAVIS_BUILD_NUMBER/g" src/main/resources/plugin.yml'
 before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
@@ -21,6 +18,7 @@ deploy:
   on:
     tags: false
     all_branches: true
+    rvm: 2.0.0
 branches:
   except:
   - "/^*-v[0-9]/"
