--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 - 'sed -i "s/^\(version: \).*$/\1$main_version.$TRAVIS_BUILD_NUMBER/g" src/main/resources/plugin.yml'
 after_success:
 - 'cp build/libs/nyaautils.jar ./nyaautils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
+before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - export GIT_TAG=$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER
@@ -20,11 +21,6 @@ deploy:
   on:
     tags: false
     all_branches: true
-- provider: script
-  script: deploy_repo.sh
-  skip_cleanup: true
-  on:
-    branch: master
 branches:
   except:
   - "/^*-v[0-9]/"
