--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: cat.nyaa.nyaautils.NyaaUtils
 description: "Helper/utilities plugin for Nyaacat Minecraft Server"
 version: 2.0
 depend: [Vault]
-softdepend: [LockettePro,RPGItems]
+softdepend: [LockettePro]
 authors: [RecursiveG]
 website: "https://github.com/NyaaCat/nyaautils"
 database: false
@@ -62,6 +62,8 @@ permissions:
   nu.enchantinfo:
     default: true
   nu.addfuel:
+    default: op
+  nu.givefuel:
     default: op
   nu.elytratoggle:
     default: true
