--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'org.spigotmc:spigot-api:1.11-R0.1-SNAPSHOT'
     compile 'net.milkbowl.vault:VaultAPI:1.6'
     compile files('lib/LocketteProAPI.jar')
+    compile 'com.sk89q.worldedit:worldedit-bukkit:6.1.5'
 }
 
 publishing {
