--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ gen### Java template
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.DS_Store
 .gradle
 gradle
 build
