--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,9 @@ name: NyaaUtils
 main: cat.nyaa.nyaautils.NyaaUtils
 description: "Helper/utilities plugin for Nyaacat Minecraft Server"
 version: 2.0
-depend: [Vault,WorldEdit]
+depend: [Vault,WorldEdit,Essentials]
 softdepend: [LockettePro]
-authors: [RecursiveG]
+authors: [RecursiveG,Librazy]
 website: "https://github.com/NyaaCat/nyaautils"
 database: false
 
