--- a/build.gradle
+++ b/build.gradle
@@ -26,20 +26,13 @@ repositories {
         name 'vault-repo'
         url 'http://nexus.hc.to/content/repositories/pub_releases'
     }
-
-    maven {
-        name 'ess-repo'
-        url 'http://repo.ess3.net/content/groups/essentials'
-    }
 }
 
 dependencies {
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
     compile 'net.milkbowl.vault:VaultAPI:1.6'
-    compile('net.ess3:Essentials:2.13-SNAPSHOT') {
-        transitive = false
-    }
     compile files('lib/LocketteProAPI.jar')
+    compile files('lib/EssentialsX-2.0.1-468.jar')
     compile 'com.sk89q.worldedit:worldedit-bukkit:6.1.5'
 }
 
