add death drop protect

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -38,6 +38,9 @@ permissions:
   nu.lootprotect:
     description: Toggle loot protect status
     default: true
+  nu.dropprotect:
+    description: Toggle drop protect status
+    default: true
   nu.exhibition.set:
     description: Exhibition modification
     default: true
