depend on NyaaCore

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,23 +14,11 @@ before_deploy:
 - echo "https://$GITHUB_KEY:@github.com" > .git/credentials
 - git push -q --follow-tags
 - gem install octokit -v 4.3.0
-- gradle publish
-- cd ..
-- git clone -b maven-repo $GIT_ORIGIN_URL nyaautils-mvn
-- cp -r nyaautils/build/repo/cat nyaautils-mvn/
-- cd nyaautils-mvn
-- git config credential.helper "store --file=.git/credentials"
-- echo "https://$GITHUB_KEY:@github.com" > .git/credentials
-- git add .
-- git commit -m "auto generated maven repo"
-- git push --follow-tags
-- cd ../nyaautils
 deploy:
 - provider: releases
   skip_cleanup: true
   prerelease: true
-  api_key:
-    secure: ${GITHUB_DEPLOY_KEY}
+  api_key: ${GITHUB_DEPLOY_KEY}
   file: './nyaautils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
   on:
     tags: false
