--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,21 @@ repositories {
     }
 
     maven {
+        name 'NyaaCore'
+        url 'https://raw.githubusercontent.com/NyaaCat/NyaaCore/maven-repo'
+    }
+
+    maven {
         name 'nu-langchecker'
         url 'https://raw.githubusercontent.com/Librazy/NyaaUtilsLangChecker/maven-repo'
     }
 }
 
 dependencies {
+    compile('cat.nyaa:nyaacore:2.0-SNAPSHOT') {
+        transitive = false
+    }
+
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
     compile 'net.milkbowl.vault:VaultAPI:1.6'
     compile files('lib/LocketteProAPI.jar')
