--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ before_install:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - 'sed -i "s/^\(version: \).*$/\1$main_version.$TRAVIS_BUILD_NUMBER/g" src/main/resources/plugin.yml'
+- pushd ~/build/
+- git clone --depth=1 https://github.com/NyaaCat/NyaaCore NyaaCat/NyaaCore
+- export NYAACORE_LANG_DIR=`readlink -f ./NyaaCat/NyaaCore/src/main/resources/lang/`
+- popd
 after_success:
 - 'cp build/libs/nyaautils.jar ./nyaautils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
 before_deploy:
