--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: cat.nyaa.nyaautils.NyaaUtils
 description: "Helper/utilities plugin for Nyaacat Minecraft Server"
 version: 3.0
 depend: [Vault,WorldEdit,Essentials,NyaaCore]
-softdepend: [LockettePro]
+softdepend: [LockettePro,ourtown]
 authors: [RecursiveG,Librazy]
 website: "https://github.com/NyaaCat/nyaautils"
 database: false
