--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 jdk: oraclejdk8
+branches:
+  except:
+    - "api-break"
 before_install:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
