--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 - export NYAACORE_LANG_DIR=`readlink -f ./NyaaCat/NyaaCore/src/main/resources/lang/`
 - popd
 after_success:
-- 'cp build/libs/nyaautils.jar ./nyaautils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
+- 'cp build/libs/NyaaUtils.jar ./NyaaUtils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
 before_deploy:
 - export GIT_TAG=$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER
 - export GIT_ORIGIN_URL=`git config --get remote.origin.url`
@@ -23,21 +23,21 @@ before_deploy:
 - gem install octokit -v 4.3.0
 - gradle publish
 - cd ..
-- git clone -b maven-repo $GIT_ORIGIN_URL nyaautils-mvn
-- cp -r nyaautils/build/repo/cat nyaautils-mvn/
-- cd nyaautils-mvn
+- git clone -b maven-repo $GIT_ORIGIN_URL NyaaUtils-mvn
+- cp -r NyaaUtils/build/repo/cat NyaaUtils-mvn/
+- cd NyaaUtils-mvn
 - git config credential.helper "store --file=.git/credentials"
 - echo "https://$GITHUB_KEY:@github.com" > .git/credentials
 - git add .
 - git commit -m "auto generated maven repo"
 - git push --follow-tags
-- cd ../nyaautils
+- cd ../NyaaUtils
 deploy:
 - provider: releases
   skip_cleanup: true
   prerelease: true
   api_key: ${GITHUB_DEPLOY_KEY}
-  file: './nyaautils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
+  file: './NyaaUtils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
   on:
     tags: false
     all_branches: true
@@ -48,4 +48,3 @@ branches:
 env:
   global:
     - main_version=3
-    - trigger_ci=20170624
