--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,40 @@ language: java
 jdk: oraclejdk8
 branches:
   except:
-    - "api-break"
-before_install:
+  - "/^*-v[0-9]/"
+  - "/^*-mc/"
+  - "maven-repo"
+  - "maven-repo-dev"
+install: true
+before_script:
+- export MAJOR_VERSION=`sed -n 's/^ext\.majorVersion = \(.*\)$/\1/p' build.gradle`
+- export MINOR_VERSION=`sed -n 's/^ext\.minorVersion = \(.*\)$/\1/p' build.gradle`
+- export MC_VERSION=`sed -n 's/^ext\.minecraftVersion = "\(.*\)"$/\1/p' build.gradle`
+- export VERSION_STRING=$MAJOR_VERSION.$MINOR_VERSION.$TRAVIS_BUILD_NUMBER-mc$MC_VERSION
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
-- 'sed -i "s/^\(version: \).*$/\1$main_version.$TRAVIS_BUILD_NUMBER/g" src/main/resources/plugin.yml'
-- pushd ~/build/
-- git clone --depth=1 https://github.com/NyaaCat/NyaaCore NyaaCat/NyaaCore
-- export NYAACORE_LANG_DIR=`readlink -f ./NyaaCat/NyaaCore/src/main/resources/lang/`
-- popd
+- 'sed -i "s/^\(version: \).*\$/\1$VERSION_STRING/g" src/main/resources/plugin.yml'
+script: gradle build
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f  $HOME/.gradle/caches/3.5/fileHashes/fileHashes.bin
+  - rm -f  $HOME/.gradle/caches/3.5/fileHashes/fileHashes.lock
+  - rm -f  $HOME/.gradle/caches/transforms-1/transforms-1.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 after_success:
-- 'cp build/libs/NyaaUtils.jar ./NyaaUtils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
-before_deploy:
-- export GIT_TAG=$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER
-- export GIT_ORIGIN_URL=`git config --get remote.origin.url`
+- cp build/libs/NyaaUtils.jar ./NyaaUtils-v$VERSION_STRING.jar
+- export GIT_TAG=v$VERSION_STRING
 - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
-- git config credential.helper "store --file=.git/credentials"
-- echo "https://$GITHUB_KEY:@github.com" > .git/credentials
-- git push -q --follow-tags
-- gem install octokit -v 4.3.0
+- export GIT_ORIGIN_URL=`git config --get remote.origin.url`
 - gradle publish
 - cd ..
-- git clone -b maven-repo $GIT_ORIGIN_URL NyaaUtils-mvn
-- cp -r NyaaUtils/build/repo/cat NyaaUtils-mvn/
-- cd NyaaUtils-mvn
+- git clone -b maven-repo $GIT_ORIGIN_URL nyaautils-mvn
+- cp -r NyaaUtils/build/repo/cat nyaautils-mvn/
+- cd nyaautils-mvn
 - git config credential.helper "store --file=.git/credentials"
 - echo "https://$GITHUB_KEY:@github.com" > .git/credentials
 - git add .
@@ -33,18 +43,11 @@ before_deploy:
 - git push --follow-tags
 - cd ../NyaaUtils
 deploy:
-- provider: releases
   skip_cleanup: true
+  provider: releases
   prerelease: true
   api_key: ${GITHUB_DEPLOY_KEY}
-  file: './NyaaUtils-$TRAVIS_BRANCH-v$main_version.$TRAVIS_BUILD_NUMBER.jar'
+  file: ./NyaaUtils-v$VERSION_STRING.jar
   on:
     tags: false
     all_branches: true
-branches:
-  except:
-  - "/^*-v[0-9]/"
-  - "maven-repo"
-env:
-  global:
-    - main_version=3
