--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: NyaaUtils
 main: cat.nyaa.nyaautils.NyaaUtils
 description: "Helper/utilities plugin for Nyaacat Minecraft Server"
-version: 4.0
+version: 4.0-dev
 depend: [Vault,WorldEdit,Essentials,NyaaCore]
 softdepend: [LockettePro,ourtown]
 authors: [RecursiveG,Librazy]
