[skip ci] fix compiler plugin part of langchecker

--- a/build.gradle
+++ b/build.gradle
@@ -69,8 +69,13 @@ dependencies {
     }
 }
 
+String nyaaCoreLangDir = System.getenv("NYAACORE_LANG_DIR")
+
 compileJava {
-    options.compilerArgs += ["-Xlint:deprecation"]
+    options.compilerArgs += ["-Xplugin:NyaaUtilsLangAnnotationProcessor", "-Xlint:deprecation"]
+    if (nyaaCoreLangDir != null) {
+        options.compilerArgs += ["-ALANG_DIR_ADDITIONAL_PATH=" + nyaaCoreLangDir]
+    }
 }
 
 publishing {
