--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ description: "Helper/utilities plugin for Nyaacat Minecraft Server"
 version: 4.0-dev
 depend: [Vault,WorldEdit,Essentials,NyaaCore]
 softdepend: [LockettePro,ourtown]
-authors: [RecursiveG,Librazy]
+authors: [RecursiveG,Cylin,Librazy]
 website: "https://github.com/NyaaCat/nyaautils"
 database: false
 
