--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,15 +2,20 @@ database:
   lpstrategy:
     provider: map
     connection:
-      []
+      key: java.util.UUID
+      value: cat.nyaa.nyaautils.lootprotect.LootProtectListener$VanillaStrategy
   lpbypass:
     provider: map
     connection:
-      []
+      key: java.util.UUID
+      value: java.util.UUID
   fueldisabled:
     provider: map
     connection:
-      []
+      key: java.util.UUID
+      value: java.util.UUID
   dpbypass:
     provider: map
     connection:
+      key: java.util.UUID
+      value: java.util.UUID
