--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,81 @@
-language: java
-jdk: oraclejdk8
+jobs:
+  include:
+  - stage: main
+    language: java
+    jdk: oraclejdk8
+    install: true
+    before_script:
+    - export MAJOR_VERSION=`sed -n 's/^ext\.majorVersion = \(.*\)$/\1/p' build.gradle`
+    - export MINOR_VERSION=`sed -n 's/^ext\.minorVersion = \(.*\)$/\1/p' build.gradle`
+    - export MC_VERSION=`sed -n 's/^ext\.minecraftVersion = "\(.*\)"$/\1/p' build.gradle`
+    - export VERSION_STRING=$MAJOR_VERSION.$MINOR_VERSION.$TRAVIS_BUILD_NUMBER-mc$MC_VERSION
+    - git config --global user.email "builds@travis-ci.com"
+    - git config --global user.name "Travis CI"
+    - 'sed -i "s/^\(version: \).*\$/\1$VERSION_STRING/g" src/main/resources/plugin.yml'
+    script: gradle build
+    after_success:
+    - cp build/libs/NyaaUtils.jar ./NyaaUtils-v$VERSION_STRING.jar
+    - export GIT_TAG=v$VERSION_STRING
+    - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
+    - export GIT_ORIGIN_URL=`git config --get remote.origin.url`
+    - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then exit 0; fi
+    - if [ "$TRAVIS_BRANCH" != "master" ]; then exit 0; fi
+    - |
+      if [ $PUBLISH_MAVEN ]; then
+        ./gradlew publish;
+        pushd ..;
+        git clone -b maven-repo $MAVEN_REPO_URL mvn;
+        cp -r NyaaUtils/build/repo/cat mvn/;
+        cd mvn;
+        git config credential.helper "store --file=.git/credentials";
+        echo "https://$GITHUB_KEY:@github.com" > .git/credentials;
+        git add .;
+        git commit -m "auto generated maven repo";
+        git push --follow-tags;
+        popd;
+      fi
+    deploy:
+      skip_cleanup: true
+      provider: releases
+      prerelease: true
+      api_key: ${GITHUB_DEPLOY_KEY}
+      file: ./NyaaUtils-v$VERSION_STRING.jar
+      on:
+        tags: false
+
+  - stage: javadoc
+    language: java
+    jdk: oraclejdk10
+    script:
+    - export MAJOR_VERSION=`sed -n 's/^ext\.majorVersion = \(.*\)$/\1/p' build.gradle`
+    - export MINOR_VERSION=`sed -n 's/^ext\.minorVersion = \(.*\)$/\1/p' build.gradle`
+    - export MC_VERSION=`sed -n 's/^ext\.minecraftVersion = "\(.*\)"$/\1/p' build.gradle`
+    - export VERSION_STRING=$MAJOR_VERSION.$MINOR_VERSION-mc$MC_VERSION
+    - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then exit 0; fi
+    - if [ "$TRAVIS_BRANCH" != "master" ]; then exit 0; fi
+    - |
+      if [ $PUBLISH_JAVADOC ]; then
+        ./gradlew javadoc;
+        pushd ..;
+        git clone -b gh-pages $MAVEN_REPO_URL pages;
+        rm -rf pages/NyaaUtils/$VERSION_STRING/;
+        mkdir -p pages/NyaaUtils/$VERSION_STRING/;
+        cp -r NyaaUtils/build/docs/javadoc pages/NyaaUtils/$VERSION_STRING/;
+        cd pages;
+        git config credential.helper "store --file=.git/credentials";
+        echo "https://$GITHUB_KEY:@github.com" > .git/credentials;
+        git add .;
+        git commit -m "auto generated javadoc";
+        git push --follow-tags;
+        popd;
+      fi
+
 branches:
   except:
   - "/^*-v[0-9]/"
   - "/^*-mc/"
   - "maven-repo"
   - "maven-repo-dev"
-install: true
-before_script:
-- export MAJOR_VERSION=`sed -n 's/^ext\.majorVersion = \(.*\)$/\1/p' build.gradle`
-- export MINOR_VERSION=`sed -n 's/^ext\.minorVersion = \(.*\)$/\1/p' build.gradle`
-- export MC_VERSION=`sed -n 's/^ext\.minecraftVersion = "\(.*\)"$/\1/p' build.gradle`
-- export VERSION_STRING=$MAJOR_VERSION.$MINOR_VERSION.$TRAVIS_BUILD_NUMBER-mc$MC_VERSION
-- git config --global user.email "builds@travis-ci.com"
-- git config --global user.name "Travis CI"
-- 'sed -i "s/^\(version: \).*\$/\1$VERSION_STRING/g" src/main/resources/plugin.yml'
-script: gradle build
-after_success:
-- cp build/libs/NyaaUtils.jar ./NyaaUtils-v$VERSION_STRING.jar
-- export GIT_TAG=v$VERSION_STRING
-- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
-- export GIT_ORIGIN_URL=`git config --get remote.origin.url`
-- ./gradlew publish
-- |
-  if [ $PUBLISH_MAVEN ]; then
-    cd ..;
-    git clone -b maven-repo $MAVEN_REPO_URL mvn;
-    cp -r NyaaUtils/build/repo/cat mvn/;
-    cd mvn;
-    git config credential.helper "store --file=.git/credentials";
-    echo "https://$GITHUB_KEY:@github.com" > .git/credentials;
-    git add .;
-    git commit -m "auto generated maven repo";
-    git push --follow-tags;
-  fi
-- cd ../NyaaUtils
-deploy:
-  skip_cleanup: true
-  provider: releases
-  prerelease: true
-  api_key: ${GITHUB_DEPLOY_KEY}
-  file: ./NyaaUtils-v$VERSION_STRING.jar
-  on:
-    tags: false
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -f  $HOME/.gradle/caches/*/fileHashes/fileHashes.bin
