--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,3 +19,8 @@ database:
     connection:
       key: java.util.UUID
       value: java.util.UUID
+  messagequeue:
+    provider: map
+    connection:
+      key: java.util.UUID
+      value: java.util.String
