player ping others, rename ping objective

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -159,4 +159,7 @@ permissions:
     default: true
   nu.ping.top:
     description: Show players' ping
-    default: true
+    default: op
+  nu.ping.others:
+    description: Show other player's ping
+    default: op
