--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ targetCompatibility = 1.8
 
 repositories {
     jcenter()
-    mavenLocal()
+    // mavenLocal()
 
     maven {
         name 'Spigot'
