--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,3 +36,9 @@ database:
       port: 6379
       database: 0
       password: password
+  extrabackpack:
+    provider: sqlite
+    connection:
+      autoscan: true
+      package: cat.nyaa.nyaautils.extrabackpack
+      file: Backpack.db
