--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -169,3 +169,9 @@ permissions:
   nu.tpall:
     description: teleport all players to you
     default: op
+  nu.bp.use:
+    description: use extra backpack
+    default: op
+  nu.bp.admin:
+    description: admin extra backpack
+    default: op
