--- a/build.gradle
+++ b/build.gradle
@@ -1,76 +1,60 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'maven-publish'
 }
 
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-}
-
-// Version strings used for CI
-// Note the spaces before and after the equals sign
 ext.majorVersion = 6
-ext.minorVersion = 1
-ext.minecraftVersion = "1.13.2"
-
+ext.minorVersion = 4
+ext.minecraftVersion = "1.14"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+// Suppiled by Jenkins
+ext.buildNumber = System.env.BUILD_NUMBER == null ? "x"                : "$System.env.BUILD_NUMBER"
+ext.mavenDirectory = System.env.MAVEN_DIR == null ? "$projectDir/repo" : "$System.env.MAVEN_DIR"
+
+// Version used for distribution. Different from maven repo
+group = "cat.nyaa"
+archivesBaseName = "NyaaUtils-mc$minecraftVersion"
+version = "$majorVersion.$minorVersion.$buildNumber"
+
+// extra compile warnings
+compileJava {
+    options.compilerArgs += ["-Xlint:deprecation,unchecked,rawtypes"]
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     jcenter()
-    // mavenLocal()
-
-    maven {
-        name 'Spigot'
-        url 'https://hub.spigotmc.org/nexus/content/groups/public/'
-    }
-
-    maven {
-        name 'Sonatype'
-        url 'https://oss.sonatype.org/content/groups/public'
-    }
-
-    maven {
-        name 'sk89q'
-        url 'http://maven.sk89q.com/artifactory/repo/'
-    }
-
-    maven {
-        name 'vault-repo'
-        url 'http://nexus.hc.to/content/repositories/pub_releases'
-    }
-
-    maven {
-        name 'NyaaCore'
-        url 'https://raw.githubusercontent.com/NyaaCat/NyaaCentral/maven-repo'
-    }
-
-    maven {
-        name 'EssentialsX'
-        url 'https://ci.ender.zone/plugin/repository/everything'
-    }
+    maven { name 'Spigot';      url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { name 'Sonatype';    url 'https://oss.sonatype.org/content/groups/public' }
+    maven { name 'sk89q';       url 'http://maven.sk89q.com/artifactory/repo/' }
+    maven { name 'vault-repo';  url 'http://nexus.hc.to/content/repositories/pub_releases' }
+    maven { name 'NyaaCat';     url 'https://ci.nyaacat.com/maven/' }
+    maven { name 'NyaaCentral'; url 'https://raw.githubusercontent.com/NyaaCat/NyaaCentral/maven-repo'}
+    maven { name 'EssentialsX'; url 'https://ci.ender.zone/plugin/repository/everything' }
 }
 
 dependencies {
     // spigot dependencies
     compileOnly "org.spigotmc:spigot-api:$minecraftVersion-R0.1-SNAPSHOT"
 
-    // other plugins
+    // Nyaa plugins
     if (gradle.hasProperty("useLocalDependencies") && gradle.useLocalDependencies) {
         compileOnly project(":NyaaCore")
+        compileOnly project(":LockettePro")
     } else {
-        compileOnly('cat.nyaa:nyaacore:6.3-SNAPSHOT') {
-            transitive = false
-        }
+        compileOnly "cat.nyaa:nyaacore:${majorVersion}.${minorVersion}-SNAPSHOT"
+        compileOnly "me.crafter.mc:lockettepro:2.9-SNAPSHOT"
     }
-    compileOnly files('lib/LocketteProAPI.jar')
+
+    // Other plugins
     compileOnly 'net.ess3:EssentialsX:2.16.0'
     compileOnly ('com.sk89q.worldedit:worldedit-bukkit:7.0.0-SNAPSHOT') {
         exclude group: 'io.papermc', module: 'paperlib'
         exclude group: 'org.bstats.bStats-Metrics', module: 'bstats-bukkit'
         exclude group: 'org.bukkit', module: 'bukkit'
     }
-    compileOnly 'javax.persistence:javax.persistence-api:2.2'
 
     // annotation processor
     compileOnly 'org.librazy:NyaaUtilsLangChecker:2.0-SNAPSHOT'
@@ -78,19 +62,36 @@ dependencies {
     annotationProcessor "org.spigotmc:spigot-api:$minecraftVersion-R0.1-SNAPSHOT"
 }
 
-String nyaaCoreLangDir = gradle.hasProperty("NyaaCoreLangDirs") ? gradle.NyaaCoreLangDirs : null
-if (nyaaCoreLangDir == null) { nyaaCoreLangDir = System.getenv("NYAACORE_LANG_DIR") }
+// Language string check
+// String nyaaCoreLangDir = gradle.hasProperty("NyaaCoreLangDirs") ? gradle.NyaaCoreLangDirs : null
+// if (nyaaCoreLangDir == null) { nyaaCoreLangDir = System.getenv("NYAACORE_LANG_DIR") }
+//
+// tasks.withType(JavaCompile) {
+//     options.compilerArgs += ["-Xplugin:NyaaUtilsLangAnnotationProcessor", "-Xlint:deprecation"]
+//     if (nyaaCoreLangDir != null) {
+//         options.compilerArgs += ["-ALANG_DIR_ADDITIONAL_PATH=" + nyaaCoreLangDir]
+//     }
+// }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ["-Xplugin:NyaaUtilsLangAnnotationProcessor", "-Xlint:deprecation"]
-    if (nyaaCoreLangDir != null) {
-        options.compilerArgs += ["-ALANG_DIR_ADDITIONAL_PATH=" + nyaaCoreLangDir]
+// publications
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.java.srcDirs
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+processResources { // modify version string
+    filesMatching("**/plugin.yml") {
+        expand 'version': project.version
     }
 }
-
 publishing {
     publications {
         mavenJava(MavenPublication) {
+            artifact sourcesJar
+            artifact javadocJar
             groupId "cat.nyaa"
             artifactId "nyaautils"
             version "$majorVersion.$minorVersion-SNAPSHOT"
@@ -99,11 +100,10 @@ publishing {
     }
     repositories {
         maven {
-            url "$buildDir/repo"
+            url "$mavenDirectory"
         }
     }
 }
-
 javadoc {
     (options as StandardJavadocDocletOptions).with {
         links 'https://docs.oracle.com/javase/8/docs/api/'
